Js Adicionado, projeto finalizado

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <form action="">
          <input type="text" name="" id="" placeholder="Nome da tarefa">
         <input type="number" name="" id="" placeholder="valor">
-        <input id="botao" type="button" value="Adicionar">
+        <input id="botao" type="submit" value="Adicionar">
         </form>
 
         <ul id="lista"></ul>
@@ -27,5 +27,7 @@
             <p>Total concluído: <span id="concluido">R$0</span></p>
         </div>
     </main>
+    <script src="script.js"></script>
+
 </body>
 </html>
